--- a/gb/22/1/14/n13504624.md
+++ b/gb/22/1/14/n13504624.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/esmwkr345/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/esmwkr345/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/esmwkr345/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/esmwkr345/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/esmwkr345/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/esmwkr345/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/esmwkr345/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>快速布雷艇成军 台海军不对称战力跃进</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/01/id13504627-537251-600x400.jpg" />
 <h6>海军新式布雷艇14日举行成军典礼。（总统府提供）
 </h6>
 <hr>
-<p>【大纪元2022年01月14日讯】（大纪元记者吴旻洲台湾台北报导）台<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E6%B5%B7%E5%86%9B.md#1">海军</a>新式布雷艇14日举行成军典礼，由总统<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>主持。代表海军筹建的<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E5%BF%AB%E9%80%9F%E5%B8%83%E9%9B%B7%E8%89%87.md#1">快速布雷艇</a>已形成有效战力，将能成为台海防卫作战中的不对称作战的可恃战力，吓阻敌登岛，可联合友军共同吓阻及迟滞敌人登岛，捍卫台海安全。</p>
-<p><ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E6%B5%B7%E5%86%9B.md#1">海军</a>舰队指挥部14日在海军左营基地水星码头举行“海军192舰队布雷大队第一、二布雷艇中队成军典礼”，包括总统<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>、国安会秘书长顾立雄、<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E5%9B%BD%E9%98%B2%E9%83%A8.md#1">国防部</a>长邱国正、中科院院长张忠诚等人皆有出席；蔡英文宣读成军命令，并授旗、授印，象征第一、第二布雷艇中队正式加入海军捍卫海疆的行列。</p>
+<p>【大纪元2022年01月14日讯】（大纪元记者吴旻洲台湾台北报导）台<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B5%B7%E5%86%9B.md#1">海军</a>新式布雷艇14日举行成军典礼，由总统<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>主持。代表海军筹建的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BF%AB%E9%80%9F%E5%B8%83%E9%9B%B7%E8%89%87.md#1">快速布雷艇</a>已形成有效战力，将能成为台海防卫作战中的不对称作战的可恃战力，吓阻敌登岛，可联合友军共同吓阻及迟滞敌人登岛，捍卫台海安全。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B5%B7%E5%86%9B.md#1">海军</a>舰队指挥部14日在海军左营基地水星码头举行“海军192舰队布雷大队第一、二布雷艇中队成军典礼”，包括总统<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%94%A1%E8%8B%B1%E6%96%87.md#1">蔡英文</a>、国安会秘书长顾立雄、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9B%BD%E9%98%B2%E9%83%A8.md#1">国防部</a>长邱国正、中科院院长张忠诚等人皆有出席；蔡英文宣读成军命令，并授旗、授印，象征第一、第二布雷艇中队正式加入海军捍卫海疆的行列。</p>
 <figure id="attachment_13504628" aria-describedby="caption-attachment-13504628" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/01/id13504628-537252.jpg"><img class="size-large wp-image-13504628" src="https://i.epochtimes.com/assets/uploads/2022/01/id13504628-537252-600x403.jpg" alt="" width="600" b="403" /></a><figcaption id="caption-attachment-13504628" class="wp-caption-text">海军新式布雷艇14日举行成军典礼。（中央社）</figcaption></figure>
-<p>蔡英文致词时表示，过去海上的布雷作业，都是由海军官兵乘坐登陆艇，以人力投放，除了布雷的速度有限，在海象恶劣的时候，任务的执行难度也会更高，由龙德公司打造的<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E5%BF%AB%E9%80%9F%E5%B8%83%E9%9B%B7%E8%89%87.md#1">快速布雷艇</a>，再加上中科院研发的自动化布雷系统，不仅更能抵抗风浪，海军弟兄姊妹在执行布雷作业时，也更能迅速确实达成任务。</p>
+<p>蔡英文致词时表示，过去海上的布雷作业，都是由海军官兵乘坐登陆艇，以人力投放，除了布雷的速度有限，在海象恶劣的时候，任务的执行难度也会更高，由龙德公司打造的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%BF%AB%E9%80%9F%E5%B8%83%E9%9B%B7%E8%89%87.md#1">快速布雷艇</a>，再加上中科院研发的自动化布雷系统，不仅更能抵抗风浪，海军弟兄姊妹在执行布雷作业时，也更能迅速确实达成任务。</p>
 <p>海军投入9亿余元预算筹获4艘快速布雷艇，由龙德造船公司建造，已在去年底全数交艇给予海军；根据海军规划，每个布雷艇中队将会由1艘快速布雷艇、1艘LCU通用登陆艇、6艘LCM机械登陆艇所组成；新打造的快速布雷艇一艇（FMLB-1）、二艇（FMLB-2）分别隶属于第一、第二布雷艇中队。</p>
-<p>海军舰队指挥部表示，台湾四面环海，因应敌情威胁，布雷大队为海军依<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E5%9B%BD%E9%98%B2%E9%83%A8.md#1">国防部</a>联合战力规划的指导，所筹建的不对称作战可恃战力，可联合友军达成共同吓阻及迟滞敌人登岛的作战目的。</p>
-<p>第二布雷艇中队上尉副中队长许书维表示，布雷中队本身就是<ahref="https://github.com/esmwkr345/djy/blob/master/gb/tag/%E4%B8%8D%E5%AF%B9%E7%A7%B0%E6%88%98%E5%8A%9B.md#1">不对称战力</a>，因为水雷价低，透过水雷反击舰船、吓阻敌登岛为目的，以维护台海作战安全，只要能达到目的，就是不对称战力；而且，快速布雷艇也能在深海区执行任务。</p>
+<p>海军舰队指挥部表示，台湾四面环海，因应敌情威胁，布雷大队为海军依<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9B%BD%E9%98%B2%E9%83%A8.md#1">国防部</a>联合战力规划的指导，所筹建的不对称作战可恃战力，可联合友军达成共同吓阻及迟滞敌人登岛的作战目的。</p>
+<p>第二布雷艇中队上尉副中队长许书维表示，布雷中队本身就是<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%8D%E5%AF%B9%E7%A7%B0%E6%88%98%E5%8A%9B.md#1">不对称战力</a>，因为水雷价低，透过水雷反击舰船、吓阻敌登岛为目的，以维护台海作战安全，只要能达到目的，就是不对称战力；而且，快速布雷艇也能在深海区执行任务。</p>
 <p>第一布雷艇中队士官长艇长孙必成则说，在人力、时间相当有限的接艇期间下，每次操演都考验着他和官兵们的体力、耐力与意志力，在大家共同努力下，最终完成海军各项测评及验收。</p>
 <p>根据中央社报导，国防部智库、国防安全研究院学者苏紫云表示，布雷在战争时期对于反制敌人登陆或封锁具有很大价值，例如1915年3月的达达尼尔海战，当时英国、法国动用62艘船舰准备登陆土耳其，弱势的土耳其海军仅来得及施放26枚水雷，结果击沉4艘主力舰，后续搭配岸炮成功阻止英军主力登陆部队。</p>
 <p>另外，美国在二战时执行东京湾任务，也是利用水雷封锁日本海上生命线。</p>
@@ -24,47 +24,36 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/19/5/24/n11276682.md#1">台湾沱江舰及快速布雷艇动工 提升国防安全</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/20/3/17/n11947285.md#1">台湾首艘自制快速布雷艇 预计今年交舰</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/20/8/13/n12327995.md#1">美智库演讲 萧美琴：持续与美军购 发展不对称战力</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/21/9/22/n13252705.md#1">美众院表决国防授权法 注重提升台湾不对称战力</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/21/12/17/n13443623.md#1">台海军“快速布雷艇”交艇 阻敌登岛能力</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/1/3/n13479311.md#1">海军指挥军士长：钦佩神韵演员的投入专注</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/1/7/n13488769.md#1">台国家影视听中心开幕 蔡英文盼为文化产业注入活力</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/1/12/n13499735.md#1">日本食品是否解禁？ 蔡英文：依据国际标准</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/1/13/n13501976.md#1">传军火商介入潜舰国造 台海军：不实报导</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/11/n13639248.md#1">台防人力短缺 医护有条件免隔离</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/5/24/n11276682.md#1">台湾沱江舰及快速布雷艇动工 提升国防安全</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947285.md#1">台湾首艘自制快速布雷艇 预计今年交舰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/13/n12327995.md#1">美智库演讲 萧美琴：持续与美军购 发展不对称战力</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/22/n13252705.md#1">美众院表决国防授权法 注重提升台湾不对称战力</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/17/n13443623.md#1">台海军“快速布雷艇”交艇 阻敌登岛能力</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/1/3/n13479311.md#1">海军指挥军士长：钦佩神韵演员的投入专注</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/1/7/n13488769.md#1">台国家影视听中心开幕 蔡英文盼为文化产业注入活力</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/1/12/n13499735.md#1">日本食品是否解禁？ 蔡英文：依据国际标准</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/1/13/n13501976.md#1">传军火商介入潜舰国造 台海军：不实报导</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/1/13/n13502315.md#1">亲共港媒指台学者违国安法 陆委会：乱扣帽子</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/4/n10829782.md#1" target="_blank">许茹：十月逾五十次地震 天象示警情势危</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/30/n9090867.md#1" target="_blank">从制鞋工到超级业务员的修炼人生</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/22/n10326635.md#1" target="_blank">杨宁：“四二五”政治构陷 江派黑手待拿下</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/9/n11780113.md#1" target="_blank">德国修炼者读《转法轮》见证神奇 受益良多</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/3/n13617717.md#1">【百年真相】惊天大案头目 被江泽民故意放走？</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/2/17/n13585268.md#1">【未解之谜】通灵男孩之一：癌症是“螃蟹”？</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/2/21/n13594785.md#1">【未解之谜】拿地球人做实验？外星人意欲何为？</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/6/n13625395.md#1">日本寺庙有300年前人鱼木乃伊 长30公分</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/6/n13625884.md#1">五行异象 大风吹太和殿大门倒地  史鉴示警</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/10/n13637209.md#1">【财商天下】制裁不断加码 中共救不了俄罗斯</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/10/n13637763.md#1">【横河观点】韩国大选另类输者 俄侵乌中共失算</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/10/n13637288.md#1">专访吴国光：俄乌战局 习与权势集团分裂</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/7/n13629102.md#1">俄政府内被爆“末日恐慌”忧战败及经济崩盘</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/9/n13632875.md#1">英男咖啡因中毒身亡 摄取量相当于200杯咖啡</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/8/n13631361.md#1">【一线采访】疑打疫苗后患白血病 中共严控消息</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/8/n13631331.md#1">首位艺人从军阵亡 乌国33岁男星最后身影曝光</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/9/n13634546.md#1">大S再婚震惊娱乐圈 20年未换电话号码成热话</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/8/n13630730.md#1">朱芯仪36岁生日宣布得乳癌 曝病况泪谢丈夫陪伴</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/10/n13637452.md#1">迪丽热巴进剧组 用红白蓝色蛇皮袋当行李箱</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/9/n13634699.md#1">舆论持续关注铁链女 《窦娥冤》剧演被叫停</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/7/n13626962.md#1">早餐天天喝这一杯 改善白发、年轻20岁</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/2/26/n13606611.md#1">肉类是糖尿病根源？改变饮食一个月就逆转</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/7/n13628592.md#1">燕麦：健康、被低估的超级食品</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/8/n13630345.md#1">为何有些航空公司不使用空桥让乘客登机？</a></li>
-<li><a href="https://github.com/esmwkr345/djy/blob/master/gb/22/3/9/n13633200.md#1">杏鲍菇酱香入味一诀窍 5分钟脆嫩鲜甜上菜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/17/n7904818.md#1">组图：李冰冰入选戛纳红毯十大最美女星</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/19/n7908433.md#1">谢金燕泪崩暂别演艺圈 王彩桦心疼慰留</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/18/n7906277.md#1">王力宏40岁生日吓傻了 满屋星友贺寿</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/17/n7902988.md#1">传陈妍希敲定婚期 7月19日北京嫁陈晓</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/19/n7910825.md#1">欧阳菲菲日籍丈夫病逝 享年77岁</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/19/n7908663.md#1">传韩正想在十九大退休 江派即将失守上海？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/18/n7908165.md#1">传郭伯雄曾3次策划外逃 “化妆出逃”内幕曝光</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/18/n7907941.md#1">【专访】前中情局局长谈中美情报之战</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/18/n7908142.md#1">百度丑闻愈曝愈多 整改掺水遭陆媒批评</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/19/n7910038.md#1">中共战机南海拦截美侦察机 美：不安全事件</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/esmwkr345/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/esmwkr345/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/1/14/n13504624.htm">快速布雷艇成军 台海军不对称战力跃进</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/1/14/n13504624.htm">快速布雷艇成军 台海军不对称战力跃进</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/esmwkr345/djy/blob/master/gb/22/1/14/n13504624.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/esmwkr345/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/esmwkr345/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/esmwkr345/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/esmwkr345/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/esmwkr345/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/22/1/14/n13504624.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
